# copilot-instructions-template

./: .gitignore  README.md
.claude/rules/: django.md  python-async.md  python-comments.md  python-configuration.md  python-documentation.md  python-logging.md  python-openpyxl.md  python-pandas-performance.md  python-pandas.md  python-pyproject.md  python-security.md  python.md
.claude/skills/: code-review.md  debugging.md  refactoring.md
.github/: copilot-instructions.md
.github/instructions/: django-api.instructions.md  django-celery.instructions.md  django-infra.instructions.md  django.instructions.md  pyproject.instructions.md  python-async.instructions.md  python-comments.instructions.md  python-configuration.instructions.md  python-documentation.instructions.md  python-logging.instructions.md  python-openpyxl.instructions.md  python-pandas-performance.instructions.md  (+5 more)
examples/django-app/: manage.py  pyproject.toml
examples/django-app/config/: __init__.py  settings.py  urls.py  wsgi.py
examples/django-app/tasks/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
examples/django-app/tests/: __init__.py  conftest.py  test_models.py  test_views.py
examples/python-pandas/: pyproject.toml
examples/python-pandas/src/analyzer/: __init__.py  loader.py  reporter.py  row_processor.py  row_processor_antipattern.py  transformer.py  validator.py
examples/python-pandas/tests/: __init__.py  conftest.py  test_loader.py  test_reporter.py  test_row_processor.py  test_row_processor_antipattern.py  test_transformer.py  test_validator.py
(+6 files in other folders)
