[project]
name = "csv-analyzer"
version = "0.1.0"
description = "CSV分析ツール - pandas を活用したデータ分析の実践例"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyzer"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/analyzer --cov-report=term-missing --cov-fail-under=90"
